// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Screensaver renders correctly 1`] = `
<div
  className="screensaver"
>
  <div />
</div>
`;

exports[`Screensaver renders correctly 2`] = `
<div
  className="screensaver"
>
  <div />
</div>
`;

exports[`Screensaver renders correctly 3`] = `
<div
  className="screensaver active"
>
  <div />
</div>
`;
